[gd_scene load_steps=6 format=3 uid="uid://k7ls3g4owws8"]

[ext_resource type="Texture2D" uid="uid://dtw6mbm23kxhg" path="res://textures/tarot_cards/major/RWS_Tarot_13_Death.jpg" id="1_6od8w"]
[ext_resource type="Script" path="res://scenes/environment/platforms/spawn_card.gd" id="1_eeowu"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rdi76"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrmwp"]
resource_local_to_scene = true
albedo_color = Color(0.827435, 0.602074, 0.0696594, 1)
metallic = 1.0
roughness = 0.5
emission = Color(0.793344, 0.574895, 0, 1)
emission_energy_multiplier = 100.0
emission_operator = 1
normal_enabled = true
normal_scale = 16.0
normal_texture = ExtResource("1_6od8w")
rim_enabled = true
rim_tint = 1.0
clearcoat_roughness = 1.0
clearcoat_texture = SubResource("CompressedTexture2D_rdi76")
backlight_enabled = true
backlight = Color(0.865264, 0.836784, 0, 1)
uv1_scale = Vector3(1, -1, 1)
uv1_triplanar_sharpness = 0.5
grow_amount = 0.337
proximity_fade_distance = 0.01
distance_fade_min_distance = 10.0
distance_fade_max_distance = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_0ih2y"]
size = Vector3(2.28444, 0.121216, 3.97114)

[node name="SpawnCard" type="Node3D" groups=["spawn_cards"]]
script = ExtResource("1_eeowu")

[node name="Card" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
layers = 2
cast_shadow = 0
use_collision = true
collision_mask = 0
size = Vector3(6, 0.09, 3.5)
material = SubResource("StandardMaterial3D_hrmwp")

[node name="PlayerDetectionArea" type="Area3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0.000277972, 0, -0.000277972, 1.5, 0, 0, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
transform = Transform3D(1, -2.1684e-18, 0, 0, 1, -4.04543e-09, 0, 4.36557e-11, 1, -0.008268, 0.029358, -0.0174955)
shape = SubResource("BoxShape3D_0ih2y")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.045, 0)
gizmo_extents = 0.0

[node name="ActivationLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.06394, 0)
visible = false
layers = 2
light_energy = 100.0
light_cull_mask = 2
omni_range = 4.0
